<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.huanli233</groupId>
  <artifactId>xtcdecrypter</artifactId>
  <version>1.0.0</version>
  <name>XTCDecrypter</name>
  <description>Decrypt SelfRsaPublicKey saved in XTCLauncher database</description>
  
  <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <mainClass>com.huanli233.xtcdecrypter.main.DecrypterMain</mainClass>
  </properties>
  
  <dependencies>
  	<dependency>
	    <groupId>commons-beanutils</groupId>
	    <artifactId>commons-beanutils</artifactId>
	    <version>1.9.2</version>
	</dependency>
	<dependency>
	   <groupId>org.apache.commons</groupId>
	   <artifactId>commons-lang3</artifactId>
	   <version>3.9</version>
	</dependency>
	<dependency>
	   <groupId>commons-collections</groupId>
	   <artifactId>commons-collections</artifactId>
	   <version>3.2.2</version>
	</dependency>
	<dependency>
	    <groupId>com.github.zhkl0228</groupId>
	    <artifactId>unidbg-android</artifactId>
	    <version>0.9.7</version>
	</dependency>
	<dependency>
	    <groupId>com.github.zhkl0228</groupId>
	    <artifactId>unidbg-api</artifactId>
	    <version>0.9.7</version>
	</dependency>
	<dependency>
	    <groupId>com.github.zhkl0228</groupId>
	    <artifactId>unidbg-dynarmic</artifactId>
	    <version>0.9.7</version>
	</dependency>
	<dependency>
	    <groupId>com.github.zhkl0228</groupId>
	    <artifactId>unidbg-hypervisor</artifactId>
	    <version>0.9.7</version>
	</dependency>
	<dependency>
	    <groupId>com.github.zhkl0228</groupId>
	    <artifactId>unidbg-kvm</artifactId>
	    <version>0.9.7</version>
	</dependency>
	<dependency>
	    <groupId>com.github.zhkl0228</groupId>
	    <artifactId>unidbg-unicorn2</artifactId>
	    <version>0.9.7</version>
	</dependency>
	<dependency>
	  <groupId>org.slf4j</groupId>
	  <artifactId>slf4j-api</artifactId>
	  <version>1.8.0-beta4</version>
	</dependency>
	<dependency>
	  <groupId>org.slf4j</groupId>
	  <artifactId>slf4j-log4j12</artifactId>
	  <version>1.8.0-beta4</version>
	</dependency>
	<dependency>
	  <groupId>log4j</groupId>
	  <artifactId>log4j</artifactId>
	  <version>1.2.17</version>
	</dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.huanli233.xtcdecrypter.main.DecrypterMain</mainClass>
                </transformer>
              </transformers>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/MANIFEST.MF</exclude>
                    <exclude>META-INF/LICENSE.txt</exclude>
                    <exclude>META-INF/NOTICE.txt</exclude>
                    <exclude>META-INF/LICENSE</exclude>
                    <exclude>META-INF/NOTICE</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.github.fvarrui</groupId>
        <artifactId>javapackager</artifactId>
        <version>1.7.2</version>
        <configuration>
        	<packagingJdk>C:\Program Files\Java\jdk-17.0.2</packagingJdk>
            <name>xtcdecrypter</name>
            <bundleJre>true</bundleJre>
            <mainClass>${mainClass}</mainClass>
            <generateInstaller>false</generateInstaller>
            <copyDependencies>true</copyDependencies>
        </configuration>
        <executions>
            <execution>
                <id>bundling-for-windows</id>
                <phase>package</phase>
                <goals>
                    <goal>package</goal>
                </goals>
                <configuration>
                    <platform>windows</platform>
                    <createZipball>true</createZipball>
                    <vmArgs>-XX:+UseZGC -Dfile.encoding=UTF-8</vmArgs>
                    <winConfig>
		                <generateMsi>false</generateMsi>
		                <generateMsm>false</generateMsm>
            			<headerType>console</headerType>
                    </winConfig>
                </configuration>
            </execution>
        </executions>
    </plugin>
    </plugins>
  </build>
</project>